Progress on mobile design 1. ran into issues with responsive css not working. realized I did not link it to the html, linked now 2. more tinkering with the nav bar, went a couple of approaches with this and think I know what to do, pushing this version before trying

--- a/portfolio_website_contents/style.css
+++ b/portfolio_website_contents/style.css
@@ -6,14 +6,26 @@ ul {
     list-style-type: none;
 }
 
-nav.container {
+.navLeft {
+    display: flex;
+    justify-content: space-between;
+}
+
+#linkedIn,
+#hamburgerIcon {
+    max-width: 50px;
+    max-height: 50px;
+    position: right;
+}
+
+/* nav.container {
     display: flex;
     justify-content: space-between;
 }
 
 nav.container ul li {
     display: inline-block;
-}
+} */
 
 h2 {
     text-align: center;
